update findUserById to look up with empId instead of email.
